--- a/BLRPC.csproj
+++ b/BLRPC.csproj
@@ -37,6 +37,7 @@
     </PropertyGroup>
     <ItemGroup>
         <Compile Include="BonelabMaps.cs" />
+        <Compile Include="UserEntries.cs" />
         <Compile Include="Main.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
         <Compile Include="RPC.cs" />
