--- a/BLRPC.csproj
+++ b/BLRPC.csproj
@@ -36,7 +36,7 @@
         <StartupObject/>
     </PropertyGroup>
     <ItemGroup>
-        <Compile Include="BonelabMaps.cs" />
+        <Compile Include="DeathCounter.cs" />
         <Compile Include="DiscordGameSDK\ActivityManager.cs" />
         <Compile Include="DiscordGameSDK\Constants.cs" />
         <Compile Include="DiscordGameSDK\Core.cs" />
@@ -44,13 +44,23 @@
         <Compile Include="DiscordGameSDK\LobbyManager.cs" />
         <Compile Include="DiscordGameSDK\StorageManager.cs" />
         <Compile Include="DiscordGameSDK\StoreManager.cs" />
-        <Compile Include="DllTools.cs" />
-        <Compile Include="EmbeddedResource.cs" />
+        <Compile Include="Internal\BonelabMaps.cs" />
+        <Compile Include="Internal\DllTools.cs" />
+        <Compile Include="Internal\EmbeddedResource.cs" />
+        <Compile Include="Internal\ExtraesMode.cs" />
+        <Compile Include="Internal\GlobalVariables.cs" />
         <Compile Include="Main.cs"/>
+        <Compile Include="Melon\ModConsole.cs" />
+        <Compile Include="Melon\ModPref.cs" />
+        <Compile Include="Melon\Preferences.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
         <Compile Include="RPC.cs" />
+        <Compile Include="ShotCounter.cs" />
     </ItemGroup>
     <ItemGroup>
+        <Reference Include="0Harmony">
+          <HintPath>References\0Harmony.dll</HintPath>
+        </Reference>
         <Reference Include="Assembly-CSharp">
           <HintPath>References\Assembly-CSharp.dll</HintPath>
         </Reference>
