Current Avatar mode

--- a/BLRPC.csproj
+++ b/BLRPC.csproj
@@ -36,7 +36,6 @@
         <StartupObject/>
     </PropertyGroup>
     <ItemGroup>
-        <Compile Include="DeathCounter.cs" />
         <Compile Include="DiscordGameSDK\ActivityManager.cs" />
         <Compile Include="DiscordGameSDK\Constants.cs" />
         <Compile Include="DiscordGameSDK\Core.cs" />
@@ -45,6 +44,7 @@
         <Compile Include="DiscordGameSDK\StorageManager.cs" />
         <Compile Include="DiscordGameSDK\StoreManager.cs" />
         <Compile Include="Internal\BonelabMaps.cs" />
+        <Compile Include="Internal\CheckPallets.cs" />
         <Compile Include="Internal\DllTools.cs" />
         <Compile Include="Internal\EmbeddedResource.cs" />
         <Compile Include="Internal\ExtraesMode.cs" />
@@ -53,9 +53,12 @@
         <Compile Include="Melon\ModConsole.cs" />
         <Compile Include="Melon\ModPref.cs" />
         <Compile Include="Melon\Preferences.cs" />
+        <Compile Include="Patching\AvatarChange.cs" />
+        <Compile Include="Patching\DeathCounter.cs" />
+        <Compile Include="Patching\ShotCounter.cs" />
+        <Compile Include="Patching\SpawnCounter.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
         <Compile Include="RPC.cs" />
-        <Compile Include="ShotCounter.cs" />
     </ItemGroup>
     <ItemGroup>
         <Reference Include="0Harmony">
