--- a/BLRPC.csproj
+++ b/BLRPC.csproj
@@ -82,7 +82,7 @@
             <HintPath>References\Il2Cppmscorlib.dll</HintPath>
         </Reference>
         <Reference Include="JeviLib">
-          <HintPath>..\TheAnnoyance\References\JeviLib.dll</HintPath>
+          <HintPath>References\JeviLib.dll</HintPath>
         </Reference>
         <Reference Include="MelonLoader">
             <HintPath>References\MelonLoader.dll</HintPath>
