--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+# adam's thing
+[Ll]inks/
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
