--- a/Staging/manifest.json
+++ b/Staging/manifest.json
@@ -1,10 +1,9 @@
 {
     "name": "BonelabRichPresence",
-    "version_number": "1.4.1",
+    "version_number": "2.0.0",
     "website_url": "https://github.com/WeatherElectric/BLRPC",
     "description": "Adds Discord Rich Presence to BONELAB.",
     "dependencies": [
-		"gnonme-BoneLib-2.4.0",
-		"extraes-JeviLibBL-2.2.1"
+		"gnonme-BoneLib-2.4.0"
     ]
 }
